added gemi1. go back on the same page 2. tags and summary on subpage 3. filter based on tags git add .

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <h1>My Reading List</h1>
+    <div id="filter-bar" class="filter-bar-hidden">
+        Filtering by tag: <span id="active-filter"></span>
+        <button id="clear-filter-btn">Clear</button>
+    </div>
     <div id="reading-list"></div>
     <script src="script.js"></script>
 </body>
