--- a/viewer.html
+++ b/viewer.html
@@ -13,11 +13,23 @@
 <body class="reader-view">
     <nav id="toc"></nav>
     <main class="main-content">
+        <a href="index.html" class="back-link">← Back to Reading List</a>
         <header class="viewer-header">
             <div class="container">
                 <p id="creation-date"></p>
                 <h1></h1>
                 <p><a id="original-link" href="#" target="_blank">View Original</a></p>
+                <div class="viewer-metadata">
+                    <div id="viewer-summary"></div>
+                    <div class="meta-group">
+                        <strong>Category:</strong>
+                        <span id="viewer-category"></span>
+                    </div>
+                    <div class="meta-group">
+                        <strong>Tags:</strong>
+                        <div id="viewer-tags"></div>
+                    </div>
+                </div>
             </div>
         </header>
         <div class="container">
