--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 </head>
 <body>
     <h1>My Reading List</h1>
-    <div id="filter-bar" class="filter-bar-hidden">
-        Filtering by tag: <span id="active-filter"></span>
-        <button id="clear-filter-btn">Clear</button>
+    <div class="controls-container">
+        <div id="search-bar">
+            <input type="text" id="search-input" placeholder="Search by title, summary, category, or tag...">
+        </div>
+        <div id="filter-bar" class="filter-bar-hidden">
+            Filtering by tag: <span id="active-filter"></span>
+            <button id="clear-filter-btn">Clear</button>
+        </div>
     </div>
     <div id="reading-list"></div>
     <script src="script.js"></script>
